--- a/package.json
+++ b/package.json
@@ -4,24 +4,29 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.11",
+    "@mui/lab": "^6.0.0-beta.14",
+    "@mui/material": "^6.4.11",
+    "@mui/styled-engine-sc": "^7.1.0",
+    "@mui/toolpad-core": "^0.1.51",
+    "@mui/x-data-grid": "^7.22.2",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
     "@refinedev/kbar": "^1.3.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router": "^7.0.2",
-    "@refinedev/simple-rest": "^5.0.1",
     "@refinedev/mui": "^6.0.0",
     "@refinedev/react-hook-form": "^4.8.14",
-    "@mui/icons-material": "^6.1.6",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/lab": "^6.0.0-beta.14",
-    "@mui/material": "^6.1.7",
-    "@mui/x-data-grid": "^7.22.2",
+    "@refinedev/react-router": "^1.0.0",
+    "@refinedev/simple-rest": "^5.0.1",
+    "json-server": "^1.0.0-beta.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
-    "@refinedev/react-router": "^1.0.0"
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.5.3",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
